# scanlan_sudoku

./: Cargo.toml  README.md  README.txt  cli_mockup  script.md
src/: lib.rs  logic.rs  main.rs  puzzles.rs  ui.rs
src/logic/: candidate_matrix.rs  cell.rs  coord.rs  decision.rs  generator.rs  grid.rs  grid_trait.rs  mod.rs  puzzle.rs  solver.rs  types.rs
src/logic/grid/: grid_tests.rs
src/ui/: utils.rs
