[package]
name = "scanlan_sudoku"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "A command-line Sudoku game, created for a university project"
homepage = "https://github.com/scan-lan/scanlan_sudoku"
repository = "https://github.com/scan-lan/scanlan_sudoku"
documentation = "https://github.com/scan-lan/scanlan_sudoku"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.8.1"
